--- a/To-Do App/index.html
+++ b/To-Do App/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="bg-positive">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+
+  <style>
+    body {
+      background-image: url(bg.jpg);
+      height: 100%;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
 </html>
